[package]
name = "joke-generator"
version = "0.1.0"
edition = "2021"
authors = ["Elijah <oyeleke.elijah205@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "a command-line application that allows users to generate jokes from different categories."
readme = "readme.md"
homepage = "https://github.com/sirloko/joke-generator"
repository = "https://github.com/sirloko/joke-generator"
keywords = ["cli", "joke", "random"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.104"